--- a/www/boards.html
+++ b/www/boards.html
@@ -39,8 +39,9 @@
 			$.post("/processInvitation", {
 				boardUser: inviter,
 				boardID: inviterBoardID
+			}).done(function(data) {
+				location.reload();
 			});
-			location.reload();
 		}
 
 	</script>
@@ -51,7 +52,7 @@
 	.btn {
 		width: 100%;
 	}
-	th {
+	th, td {
 		text-align: center;
 	}
 	</style>
@@ -140,11 +141,11 @@
 			{% endfor %}
 		<p><p>
 		{% if following %}
+			{% if following.count() > 0 %}
 		<tr><th colspan="3"><p></th></tr>
 		<tr><th colspan="3">Currently Following</th></tr>
 			{% for record in following %}
 				{% for boardID in record.boardID %}
-					{% if record.isPublic[loop.index0] %}
 					<tr>
 						<td></td>
 						<td><button class="btn disabled btntext btn-primary btn-sm" name="boardID" type="submit" width="100%" value={{ boardID }}>Board{{ boardID }}: {{ record.boardName[loop.index0] }}</button></td>
@@ -165,13 +166,14 @@
 							{% endif %}
 						</td>
 					</tr>
-					{% endif %}
 				{% endfor %}
 			{% endfor %}
 		{% endif %}
-		<tr><th colspan="3">Invitations</th></tr>
+		{% endif %}
+		<tr><th colspan="3"><p></th></tr>
+		<tr><th colspan="3">My Invitations</th></tr>
 		{% if user.invitation == 0 %}
-		<tr><th colspan="3">There are no invitations</th></tr>
+		<tr><td colspan="3">There are no invitations</td></tr>
 		{% else %}
 			{% for record in invited %}
 				{% for boardUser in record.boardUser %}
@@ -187,7 +189,7 @@
 		{% endif %}
 		</table>	
 		<p><p>
-		<b>{{ error }}</b>
+		<em>{{ error }}</em>
 		<p><p>
 	</div>
 	<!--END BODY-->
