Prevent users from logging multiple browser
> Each account can only login from 1 browser,
> Previous logins will be forced to logout.
> Fade in effect for error (When sending invitation) (Prevents user from
sending invitation to himself/herself)

--- a/www/boardsettings.html
+++ b/www/boardsettings.html
@@ -67,17 +67,22 @@
 		document.getElementById("successInvite").style.display = "none";
 		document.getElementById("failInvite").style.display = "none";
 		var invitee = $('#invitee').val();
+		if (invitee == "{{ board.boardUser }}") {
+			//Cannot invite yourself.
+			$("#failInvite").effect("fade", "", 500, "");
+			return;
+		}
 		$.post("/inviteUsers", {
 				user: invitee,
 				boardUser: "{{ board.boardUser }}",
 				boardID: {{ board.boardID }},
 				boardName: "{{ board.boardName }}"
 		}).done(function( data ) {
-			document.getElementById("successInvite").style.display = "inline-block";
+			$("#successInvite").effect("fade", "", 500, "");
 			document.getElementById("failInvite").style.display = "none";
 		}).fail(function( data ) {
+			$("#failInvite").effect("fade", "", 500, "");
 			document.getElementById("successInvite").style.display = "none";
-			document.getElementById("failInvite").style.display = "inline-block";
 		});
 	}
 
