Minor fix - Current object window
> Made current object options not appear on init (because there's no
item selected)

--- a/www/index.html
+++ b/www/index.html
@@ -98,6 +98,7 @@
 			timedOut(false);
 		};
 		// Initial load auxiliary function(s)
+		resetInfoWin();
 		promptBoardEmpty();
 	}
 	function promptBoardEmpty() {
