--- a/www/index.html
+++ b/www/index.html
@@ -287,7 +287,7 @@
   		var bgcolor = blkcolor;
   		var txtcolor = fntcolor;
   		var input = document.getElementById("newtext");
-  		var text = input.value || "Click to edit";
+  		var text = input.value;
 		if(text == null || text.trim() == ""){
 			text = "Click to edit";
 		}
