--- a/www/boardsettings.html
+++ b/www/boardsettings.html
@@ -4,10 +4,6 @@
 	<title>PinnerSpace - Board Settings</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
-	<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
-	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../scripts/jquery.tools.min.js" type="text/javascript"></script>
-	<script src="../scripts/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
 	<style>
 	th {
 		text-align: center;
@@ -31,6 +27,7 @@
 
   	#btnPrivate, #btnPublic, #successInvite, #failInvite {
   		display: none;
+  		outline-color: transparent;
   	}
   	#successInvite {
   		color:green;
@@ -55,75 +52,6 @@
   	}
 
 	</style>
-	<script type="text/javascript">
-
-	function init() {
-		$("#inviteUsersBox").overlay({
-			mask: {
-				color: '#fff',
-				loadSpeed: 200,
-				opacity: 0.5
-			},
-			closeOnClick: false,
-		});
-		if ("{{ board.isPublic }}" == "True") {
-			document.getElementById("btnPublic").style.display = "inline-block";
-			document.getElementById("btnPrivate").style.display = "none";
-		} else {
-			document.getElementById("btnPublic").style.display = "none";
-			document.getElementById("btnPrivate").style.display = "inline-block";
-		}
-	}
-
-	function inviteBox(e) {
-		$("#inviteUsersBox").overlay().load();
-	}
-
-	function inviteUser() {
-		document.getElementById("successInvite").style.display = "none";
-		document.getElementById("failInvite").style.display = "none";
-		var invitee = $('#invitee').val();
-		if (invitee == "{{ board.boardUser }}") {
-			//Cannot invite yourself.
-			$("#failInvite").effect("fade", "", 500, "");
-			return;
-		}
-		$.post("/inviteUsers", {
-				user: invitee,
-				boardUser: "{{ board.boardUser }}",
-				boardID: {{ board.boardID }},
-				boardName: "{{ board.boardName }}"
-		}).done(function( data ) {
-			$("#successInvite").effect("fade", "", 500, "");
-			document.getElementById("failInvite").style.display = "none";
-		}).fail(function( data ) {
-			$("#failInvite").effect("fade", "", 500, "");
-			document.getElementById("successInvite").style.display = "none";
-		});
-	}
-
-	function switchVisibility(visible) {
-		if (visible) {
-			var resp=confirm("Upon switching to \"Public\", this board can be seen by anyone.\nAre you sure you want to switch to \"Public\"?");
-		} else {
-			var resp=confirm("Upon switching to \"Private\", this board will only be seen by people who received your invitation.\nAre you sure you want to switch to \"Private\"?");
-		}
-		if(resp==true){
-			$.post("/switchVisibility", {
-				visibility: visible,
-				boardID: {{ board.boardID }}
-			}).done(function( data ) {
-				if (visible) {
-					document.getElementById("btnPublic").style.display = "inline-block";
-					document.getElementById("btnPrivate").style.display = "none";
-				} else {
-					document.getElementById("btnPublic").style.display = "none";
-					document.getElementById("btnPrivate").style.display = "inline-block";
-				}
-			});
-		}
-	}
-	</script>
 </head>
 <body onload="init()">
 	<div id="header">
@@ -242,5 +170,78 @@
 		</div>
 	</div>
 	<!--END BODY-->
+	<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="../scripts/jquery.tools.min.js" type="text/javascript"></script>
+	<script src="../scripts/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
+	<script type="text/javascript">
+
+	function init() {
+		$("#inviteUsersBox").overlay({
+			mask: {
+				color: '#fff',
+				loadSpeed: 200,
+				opacity: 0.5
+			},
+			closeOnClick: false,
+		});
+		if ("{{ board.isPublic }}" == "True") {
+			document.getElementById("btnPublic").style.display = "inline-block";
+			document.getElementById("btnPrivate").style.display = "none";
+		} else {
+			document.getElementById("btnPublic").style.display = "none";
+			document.getElementById("btnPrivate").style.display = "inline-block";
+		}
+	}
+
+	function inviteBox(e) {
+		$("#inviteUsersBox").overlay().load();
+	}
+
+	function inviteUser() {
+		document.getElementById("successInvite").style.display = "none";
+		document.getElementById("failInvite").style.display = "none";
+		var invitee = $('#invitee').val();
+		if (invitee == "{{ board.boardUser }}") {
+			//Cannot invite yourself.
+			$("#failInvite").effect("fade", "", 500, "");
+			return;
+		}
+		$.post("/inviteUsers", {
+				user: invitee,
+				boardUser: "{{ board.boardUser }}",
+				boardID: {{ board.boardID }},
+				boardName: "{{ board.boardName }}"
+		}).done(function( data ) {
+			$("#successInvite").effect("fade", "", 500, "");
+			document.getElementById("failInvite").style.display = "none";
+		}).fail(function( data ) {
+			$("#failInvite").effect("fade", "", 500, "");
+			document.getElementById("successInvite").style.display = "none";
+		});
+	}
+
+	function switchVisibility(visible) {
+		if (visible) {
+			var resp=confirm("Upon switching to \"Public\", this board can be seen by anyone.\nAre you sure you want to switch to \"Public\"?");
+		} else {
+			var resp=confirm("Upon switching to \"Private\", this board will only be seen by people who received your invitation.\nAre you sure you want to switch to \"Private\"?");
+		}
+		if(resp==true){
+			$.post("/switchVisibility", {
+				visibility: visible,
+				boardID: {{ board.boardID }}
+			}).done(function( data ) {
+				if (visible) {
+					document.getElementById("btnPublic").style.display = "inline-block";
+					document.getElementById("btnPrivate").style.display = "none";
+				} else {
+					document.getElementById("btnPublic").style.display = "none";
+					document.getElementById("btnPrivate").style.display = "inline-block";
+				}
+			});
+		}
+	}
+	</script>
 </body>
 </html>
