Removed a small space between the button.

--- a/www/boardsettings.html
+++ b/www/boardsettings.html
@@ -45,10 +45,11 @@
      	border:none;
      	outline-color: transparent;
      	width: 158px;
+     	height: 28px;
   	}
 
   	.dropdown-menu>li>a {
-  		padding: 3px 0px;
+  		padding: 0px 0px;
   	}
 
 	</style>
